# GEMINI-Kahoot-generator

./: .gitignore  GEMINI.md  KahootQuizTemplate.xlsx  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
