[project]
name = "kahoot-quiz-generator"
version = "0.1.0"
description = "A Streamlit app to generate Kahoot quizzes from PDFs using the Gemini API."
authors = [{ name = "Gemini", email = "no-reply@google.com" }]
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "google-genai",
    "pypdf",
    "openpyxl",
    "python-dotenv",
    "blinker",
    "protobuf",
    "typing-extensions",
    "cachetools",
    "click",
    "tornado",
    "toml",
    "requests",
    "urllib3",
    "rich",
    "altair",
    "pandas",
    "numpy",
    "watchdog",
    "idna",
    "chardet",
    "charset-normalizer",
    "certifi",
    "packaging",
    "google-ai-generativelanguage",
    "google-api-core",
    "googleapis-common-protos",
    "google-api-python-client",
    "google-auth",
    "grpcio",
    "grpcio-status",
    "pillow",
    "pyyaml",
    "tqdm",
    "pyasn1",
    "pyasn1_modules",
    "rsa",
    "pydantic",
    "pydantic-core",
    "typing-inspection",
    "annotated-types",
    "anyio",
    "sniffio",
    "httpx",
    "distro",
    "tenacity",
    "websockets",
    "proto-plus",
    "httplib2",
    "pyparsing",
    "uritemplate",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"